# Web-Voxel-Renderer

./: .gitignore  README.md
src/: notes.txt
src/project/: Cargo.toml  build.bat
src/project/src/: fragment.glsl  lib.rs  vertex.glsl
src/project/web/: index.html  main.js  style.css
